--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ buildscript {
         def retrofit_version = '2.6.2'
         def truth_version = '1.0'
         def room_version = '2.2.2'
+        def dagger_version = '2.26'
+        def picasso_version = '2.71828'
         def work_version = '2.2.0'
 
         libraries = [
@@ -47,19 +49,28 @@ buildscript {
                 // Room for database
                 "androidx.room:room-ktx:$room_version",
 
+                // Dagger
+                "com.google.dagger:dagger-android:$dagger_version",
+
                 // network & serialization
                 "com.google.code.gson:gson:$gson_version",
                 "com.squareup.retrofit2:converter-gson:$retrofit_gson_version",
                 "com.squareup.retrofit2:retrofit:$retrofit_version",
 
+                // Image loading
+                "com.squareup.picasso:picasso:$picasso_version",
+
+                // Rx to Coroutines migration
                 "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:$coroutines_android_version",
 
+                // RxJava & RxAndroid
                 "io.reactivex.rxjava2:rxjava:2.2.16",
                 "io.reactivex.rxjava2:rxandroid:2.1.1",
         ]
 
         librariesKapt = [
                 "androidx.room:room-compiler:$room_version",
+                "com.google.dagger:dagger-compiler:$dagger_version",
         ]
 
         librariesDebug = [
