--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ buildscript {
         def room_version = '2.2.2'
         def picasso_version = '2.71828'
         def ktx_version = '1.1.0'
+        def tensor_flow_version = '1.8.0'
 
         libraries = [
                 // Kotlin standard library
@@ -62,6 +63,8 @@ buildscript {
                 // RxJava & RxAndroid
                 "io.reactivex.rxjava2:rxjava:2.2.16",
                 "io.reactivex.rxjava2:rxandroid:2.1.1",
+
+                "org.tensorflow:tensorflow-android:$tensor_flow_version"
         ]
 
         librariesKapt = [
