Remove unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,19 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+### files for GIT to ignore 
+
+*.class
+*.dex
+*.apk
+*.ap_
+bin/
+gen/
+local.properties
+.checkstyle
 .DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+.idea/*
+!.idea/codeStyles
+!.idea/codeInsightSettings.xml
+.gradle
+build/
+*.iml
+captures
+lint.xml
